--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SITE_NAME_HEADER=GEOSINA
+SITE_NAME_HEADER=Digital Garden
 SITE_MAIN_LANGUAGE=en
-SITE_BASE_URL=https://geosinia-web.vercel.app
+SITE_BASE_URL=https://geosinia-web.vercel.app/
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
@@ -15,10 +15,10 @@ USE_FULL_RESOLUTION_IMAGES=false
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
-dgShowLocalGraph=false
+dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=false
 dgEnableSearch=false
-dgShowToc=true
+dgShowToc=false
 dgLinkPreview=false
 dgShowTags=false
