--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=GEOSINIA
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://geosinia-web.vercel.app/
 SHOW_CREATED_TIMESTAMP=false
