--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=true
-dgEnableSearch=false
+dgEnableSearch=true
 dgShowToc=true
 dgLinkPreview=true
 dgShowTags=false
