--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SITE_NAME_HEADER=GEOSINIA
 SITE_MAIN_LANGUAGE=en
-SITE_BASE_URL=https://geosinia-web.vercel.app/
+SITE_BASE_URL=https://geosinia-web.vercel.app
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
@@ -17,7 +17,7 @@ dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=false
-dgShowFileTree=true
+dgShowFileTree=false
 dgEnableSearch=true
 dgShowToc=true
 dgLinkPreview=true
